...
      ),
      body: Center(
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            FilledButton(
              key: ValueKey('new-machine-flow'),
              onPressed: () async {
                final hasPermissions = await _hasBluetoothPermissions();
                if (!context.mounted) return;
                if (hasPermissions) {
                  _goToNewMachineFlow(context);
                } else {
...
