...
                            child: CircularProgressIndicator.adaptive(backgroundColor: Colors.white),
                          )
                        : const Text('Start Provisioning Flow'),
                  ),
                  const SizedBox(height: 16),
                  FilledButton(
                    key: ValueKey('start-tethering'),
                    onPressed: () => (!_isLoadingTetheringFlow && !_isLoadingStandardFlow) ? _createRobot(tethering: true) : null,
                    child: _isLoadingTetheringFlow
                        ? const SizedBox(
                            width: 20,
                            height: 20,
                            child: CircularProgressIndicator.adaptive(backgroundColor: Colors.white),
...
